<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.playActivity">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="142dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/album_art" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintStart_toEndOf="@+id/previous_button"
            app:layout_constraintTop_toBottomOf="@+id/album_art"
            app:layout_constraintVertical_bias="0.189"
            app:srcCompat="@drawable/ic_play_button" />

        <ImageView
            android:id="@+id/previous_button"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="72dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_previous_button" />

        <ImageView
            android:id="@+id/next_button"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="72dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_next_button" />

        <TextView
            android:id="@+id/Play_song_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="16dp"
            android:text="@string/media_content"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/album_art"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="28dp" />

        <LinearLayout
            android:id="@+id/bottom_nav_play"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_button">

            <ImageView
                android:id="@+id/playlist_icon_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_view_list" />

            <ImageView
                android:id="@+id/play_icon_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_play_circle_current" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>